<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:padding="5dp"
    tools:ignore="HardcodedText" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/billTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="Pre-Tax Bill $"
                android:textColor="#000" />

            <EditText
                android:id="@+id/billEditTextSV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/defaultamt"
                android:textSize="14sp" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/taxLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/taxpct"
                android:textColor="#000" />

            <EditText
                android:id="@+id/taxPctEditTextSV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/defaultTax"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/tip"
                android:textColor="#000" />

            <EditText
                android:id="@+id/tipPctEditTextSV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/defaultTip"
                android:textSize="14sp" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/tip"
                android:textColor="#000"
                android:visibility="invisible" />

            <Button
                android:id="@+id/continueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="Continue ->" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="Set Default"
            android:textColor="#000" />

        <CheckBox
            android:id="@+id/billDefaultCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:text="Bill"
            android:textColor="#000" />

        <CheckBox
            android:id="@+id/taxDefaultCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="Tax"
            android:textColor="#000" />

        <CheckBox
            android:id="@+id/tipDefaultCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Tip"
            android:textColor="#000" />
    </TableRow>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/setDefaultButtonSV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="Set As Defaults" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/useDefaultsButtonSV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="Use Default Values" />
        </TableRow>
    </TableLayout>

</TableLayout>